--- a/web/src/index.html
+++ b/web/src/index.html
@@ -2,13 +2,23 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Web</title>
+  <title>Golden Boot</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+  <body>
+    <div class="container">
+    <app-root>
+
+      <div>
+        <h1>Loading ...</h1>
+      </div>
+
+    </app-root>
+    </div>
+  </body>
 </html>
